--- a/UI/joinGUI.ui
+++ b/UI/joinGUI.ui
@@ -774,6 +774,66 @@ background-color:transparent
     <string/>
    </property>
   </widget>
+  <widget class="QLabel" name="titleLabel_2">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>780</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>함초롬돋움</family>
+     <pointsize>14</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: black;
+background-color: rgba(215, 215, 215, 255);
+text-align:center;
+ border-bottom: 2px solid black;</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="iconlabel">
+   <property name="geometry">
+    <rect>
+     <x>5</x>
+     <y>5</y>
+     <width>20</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>함초롬돋움</family>
+     <pointsize>14</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: black;
+background-color: rgba(215, 215, 215, 255);
+text-align:center;</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <zorder>titleLabel_2</zorder>
+  <zorder>frame</zorder>
+  <zorder>minimizeBtn</zorder>
+  <zorder>closeBtn</zorder>
+  <zorder>iconlabel</zorder>
  </widget>
  <resources/>
  <connections/>
