--- a/UI/loginGUI.ui
+++ b/UI/loginGUI.ui
@@ -14,13 +14,13 @@
    <string notr="true">PIM AGENT</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color:qlineargradient(spread:pad, x1:0.5, y1:0.432, x2:0.499682, y2:0.551, stop:0 rgba(215, 215, 215, 255), stop:1 rgba(239, 239, 237, 255))</string>
+   <string notr="true">background-color:qlineargradient(spread:pad, x1:0.5, y1:0.432, x2:0.499682, y2:0.551, stop:0 #E4E4E2, stop:1 #EFEFED)</string>
   </property>
   <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
      <x>170</x>
-     <y>70</y>
+     <y>90</y>
      <width>450</width>
      <height>300</height>
     </rect>
@@ -32,8 +32,8 @@
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color:#ffffff;
-border: 2px solid black;
+    <string notr="true">background-color:#D7D7D5;
+border: transparent;
 </string>
    </property>
    <property name="frameShape">
@@ -58,7 +58,7 @@ border: 2px solid black;
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color:#EFEFED;</string>
+     <string notr="true">background-color:#ffffff;</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -75,12 +75,12 @@ border: 2px solid black;
     </property>
     <property name="font">
      <font>
-      <family>함초롬돋움</family>
-      <pointsize>12</pointsize>
+      <family>HY견고딕</family>
+      <pointsize>11</pointsize>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">border: 5px solid white;</string>
+     <string notr="true">border:trasparent;</string>
     </property>
     <property name="text">
      <string>PW</string>
@@ -105,7 +105,7 @@ border: 2px solid black;
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color:#EFEFED;</string>
+     <string notr="true">background-color:#ffffff;</string>
     </property>
     <property name="echoMode">
      <enum>QLineEdit::Password</enum>
@@ -122,12 +122,12 @@ border: 2px solid black;
     </property>
     <property name="font">
      <font>
-      <family>함초롬돋움</family>
-      <pointsize>12</pointsize>
+      <family>HY견고딕</family>
+      <pointsize>11</pointsize>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">border: 5px solid white;</string>
+     <string notr="true">border:trasparent;</string>
     </property>
     <property name="text">
      <string>ID</string>
@@ -319,17 +319,23 @@ border: 2px solid black;
     </property>
     <property name="font">
      <font>
-      <family>함초롬돋움</family>
-      <pointsize>12</pointsize>
+      <family>HY견고딕</family>
+      <pointsize>10</pointsize>
       <weight>50</weight>
       <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: white;
+     <string notr="true">QPushButton{
+color: white;
 background-color:#474747;
 border-style: solid;
-border-radius:3px;</string>
+border-radius:3px;
+}
+
+ QPushButton:hover {
+background-color:#9E9E9E;
+ }</string>
     </property>
     <property name="text">
      <string>로그인</string>
@@ -346,14 +352,15 @@ border-radius:3px;</string>
     </property>
     <property name="font">
      <font>
-      <family>함초롬돋움</family>
+      <family>HY견고딕</family>
       <pointsize>14</pointsize>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: black;
-background-color: #9E9E9E;
-text-align:center;</string>
+     <string notr="true">color: white;
+background-color:#474747;
+text-align:center;
+border-right:transparent;</string>
     </property>
     <property name="text">
      <string>Personal Info Management Agent</string>
@@ -545,17 +552,23 @@ text-align:center;</string>
     </property>
     <property name="font">
      <font>
-      <family>함초롬돋움</family>
-      <pointsize>12</pointsize>
+      <family>HY견고딕</family>
+      <pointsize>10</pointsize>
       <weight>50</weight>
       <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: white;
+     <string notr="true">QPushButton{
+color: white;
 background-color:#474747;
 border-style: solid;
-border-radius: 3px;</string>
+border-radius:3px;
+}
+
+ QPushButton:hover {
+background-color:#9E9E9E;
+ }</string>
     </property>
     <property name="text">
      <string>ID/PW 찾기</string>
@@ -744,17 +757,23 @@ border-radius: 3px;</string>
     </property>
     <property name="font">
      <font>
-      <family>함초롬돋움</family>
-      <pointsize>12</pointsize>
+      <family>HY견고딕</family>
+      <pointsize>10</pointsize>
       <weight>50</weight>
       <bold>false</bold>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: white;
+     <string notr="true">QPushButton{
+color: white;
 background-color:#474747;
 border-style: solid;
-border-radius: 3px;</string>
+border-radius:3px;
+}
+
+ QPushButton:hover {
+background-color:#9E9E9E;
+ }</string>
     </property>
     <property name="text">
      <string>회원가입</string>
@@ -784,7 +803,7 @@ border:transparent;
 }
 
  QPushButton:hover {
-     background-color: #9E9E9E;
+background-color:#EFEFED;
  }</string>
    </property>
    <property name="text">
@@ -831,9 +850,10 @@ border:transparent;
    </property>
    <property name="styleSheet">
     <string notr="true">color: black;
-background-color: rgba(215, 215, 215, 255);
+background-color: rgba(255,255,255);
 text-align:center;
- border-bottom: 2px solid black;</string>
+ border-bottom: 0.4px solid black;
+</string>
    </property>
    <property name="text">
     <string/>
@@ -859,7 +879,7 @@ text-align:center;
    </property>
    <property name="styleSheet">
     <string notr="true">color: black;
-background-color: rgba(215, 215, 215, 255);
+background-color: rgba(255,255,255);
 text-align:center;</string>
    </property>
    <property name="text">
