--- a/UI/runGUI.ui
+++ b/UI/runGUI.ui
@@ -14,13 +14,13 @@
    <string>PIM AGENT</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color:qlineargradient(spread:pad, x1:0.5, y1:0.432, x2:0.499682, y2:0.551, stop:0 rgba(215, 215, 215, 255), stop:1 rgba(239, 239, 237, 255))</string>
+   <string notr="true">background-color:qlineargradient(spread:pad, x1:0.5, y1:0.432, x2:0.499682, y2:0.551, stop:0 #E4E4E2, stop:1 #EFEFED)</string>
   </property>
   <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
      <x>170</x>
-     <y>70</y>
+     <y>90</y>
      <width>450</width>
      <height>300</height>
     </rect>
@@ -32,8 +32,8 @@
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color:#ffffff;
-border: 2px solid black;
+    <string notr="true">background-color:#D7D7D5;
+border: transparent;
 </string>
    </property>
    <property name="frameShape">
@@ -53,13 +53,13 @@ border: 2px solid black;
     </property>
     <property name="font">
      <font>
-      <family>Andalus</family>
-      <pointsize>16</pointsize>
+      <family>HY견고딕</family>
+      <pointsize>14</pointsize>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: black;
-background-color: #9E9E9E;
+     <string notr="true">color: white;
+background-color:#474747;
 text-align:center;</string>
     </property>
     <property name="text">
@@ -250,11 +250,23 @@ text-align:center;</string>
       </disabled>
      </palette>
     </property>
+    <property name="font">
+     <font>
+      <family>HY견고딕</family>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
     <property name="styleSheet">
-     <string notr="true">color: white;
+     <string notr="true">QPushButton{
+color: white;
 background-color:#474747;
 border-style: solid;
-border-radius:3px;</string>
+border-radius:3px;
+}
+
+ QPushButton:hover {
+background-color:#9E9E9E;
+ }</string>
     </property>
     <property name="text">
      <string>로그아웃</string>
@@ -269,9 +281,13 @@ border-radius:3px;</string>
       <height>191</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <family>HY견고딕</family>
+     </font>
+    </property>
     <property name="styleSheet">
-     <string notr="true">background-color:#EFEFED;
-border: 1px solid;</string>
+     <string notr="true">background-color:#ffffff;</string>
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
@@ -288,9 +304,13 @@ border: 1px solid;</string>
        <height>31</height>
       </rect>
      </property>
+     <property name="font">
+      <font>
+       <family>HY견고딕</family>
+      </font>
+     </property>
      <property name="styleSheet">
-      <string notr="true">background-color:#EFEFED;
-border: 5px solid #EFEFED;</string>
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>방문기록</string>
@@ -308,9 +328,13 @@ border: 5px solid #EFEFED;</string>
        <height>31</height>
       </rect>
      </property>
+     <property name="font">
+      <font>
+       <family>HY견고딕</family>
+      </font>
+     </property>
      <property name="styleSheet">
-      <string notr="true">background-color:#EFEFED;
-border: 5px solid #EFEFED;</string>
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>다운로드 기록</string>
@@ -328,9 +352,13 @@ border: 5px solid #EFEFED;</string>
        <height>31</height>
       </rect>
      </property>
+     <property name="font">
+      <font>
+       <family>HY견고딕</family>
+      </font>
+     </property>
      <property name="styleSheet">
-      <string notr="true">background-color:#EFEFED;
-border: 5px solid #EFEFED;</string>
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>북마크</string>
@@ -348,9 +376,13 @@ border: 5px solid #EFEFED;</string>
        <height>31</height>
       </rect>
      </property>
+     <property name="font">
+      <font>
+       <family>HY견고딕</family>
+      </font>
+     </property>
      <property name="styleSheet">
-      <string notr="true">background-color:#EFEFED;
-border: 5px solid #EFEFED;</string>
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>쿠키 파일</string>
@@ -368,9 +400,13 @@ border: 5px solid #EFEFED;</string>
        <height>31</height>
       </rect>
      </property>
+     <property name="font">
+      <font>
+       <family>HY견고딕</family>
+      </font>
+     </property>
      <property name="styleSheet">
-      <string notr="true">background-color:#EFEFED;
-border: 5px solid #EFEFED;</string>
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>자동완성 양식</string>
@@ -388,9 +424,13 @@ border: 5px solid #EFEFED;</string>
        <height>31</height>
       </rect>
      </property>
+     <property name="font">
+      <font>
+       <family>HY견고딕</family>
+      </font>
+     </property>
      <property name="styleSheet">
-      <string notr="true">background-color:#EFEFED;
-border: 5px solid #EFEFED;</string>
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>캐시 파일</string>
@@ -408,9 +448,13 @@ border: 5px solid #EFEFED;</string>
        <height>31</height>
       </rect>
      </property>
+     <property name="font">
+      <font>
+       <family>HY견고딕</family>
+      </font>
+     </property>
      <property name="styleSheet">
-      <string notr="true">background-color:#EFEFED;
-border: 5px solid #EFEFED;</string>
+      <string notr="true"/>
      </property>
      <property name="text">
       <string>세션 파일</string>
@@ -602,17 +646,23 @@ border: 5px solid #EFEFED;</string>
      </property>
      <property name="font">
       <font>
-       <family>Agency FB</family>
-       <pointsize>10</pointsize>
+       <family>HY견고딕</family>
+       <pointsize>9</pointsize>
        <weight>50</weight>
        <bold>false</bold>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: white;
+      <string notr="true">QPushButton{
+color: white;
 background-color:#474747;
 border-style: solid;
-border-radius:3px;</string>
+border-radius:3px;
+}
+
+ QPushButton:hover {
+background-color:#9E9E9E;
+ }</string>
      </property>
      <property name="text">
       <string>설정</string>
@@ -630,15 +680,14 @@ border-radius:3px;</string>
     </property>
     <property name="font">
      <font>
-      <family>Agency FB</family>
+      <family>HY견고딕</family>
       <pointsize>12</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color:#EFEFED;
-border: 5px solid #EFEFED;</string>
+     <string notr="true">background-color:#ffffff;</string>
     </property>
     <property name="text">
      <string>관리  개인정보  파일  설정</string>
@@ -689,10 +738,11 @@ background-color:transparent
     <string notr="true">QPushButton{
 background-color:transparent;
 border:transparent;
+
 }
 
  QPushButton:hover {
-     background-color: #9E9E9E;
+background-color:#EFEFED;
  }</string>
    </property>
    <property name="text">
@@ -739,9 +789,10 @@ border:transparent;
    </property>
    <property name="styleSheet">
     <string notr="true">color: black;
-background-color: rgba(215, 215, 215, 255);
+background-color: rgba(255,255,255);
 text-align:center;
- border-bottom: 2px solid black;</string>
+ border-bottom: 0.4px solid black;
+</string>
    </property>
    <property name="text">
     <string/>
@@ -767,7 +818,7 @@ text-align:center;
    </property>
    <property name="styleSheet">
     <string notr="true">color: black;
-background-color: rgba(215, 215, 215, 255);
+background-color: rgba(255,255,255);
 text-align:center;</string>
    </property>
    <property name="text">
