--- a/UI/joinGUI.ui
+++ b/UI/joinGUI.ui
@@ -68,9 +68,9 @@ border: transparent;
     <property name="geometry">
      <rect>
       <x>233</x>
-      <y>92</y>
+      <y>87</y>
       <width>41</width>
-      <height>21</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -375,7 +375,7 @@ text-align:center;</string>
      <rect>
       <x>233</x>
       <y>138</y>
-      <width>91</width>
+      <width>61</width>
       <height>30</height>
      </rect>
     </property>
@@ -391,32 +391,10 @@ background-color: rgba(255,255,255,0);
 background: transparent;</string>
     </property>
     <property name="text">
-     <string>PW 재확인</string>
+     <string>이메일</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="pwdCheckEdit">
-    <property name="geometry">
-     <rect>
-      <x>240</x>
-      <y>166</y>
-      <width>188</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>돋움</family>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color:#ffffff;</string>
-    </property>
-    <property name="echoMode">
-     <enum>QLineEdit::Password</enum>
     </property>
    </widget>
    <widget class="QLabel" name="nicknameLabel">
@@ -731,6 +709,41 @@ background-color:#9E9E9E;
      <string>회원가입</string>
     </property>
    </widget>
+   <widget class="QLineEdit" name="emailEdit">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>166</y>
+      <width>188</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>돋움</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:#ffffff;</string>
+    </property>
+    <property name="echoMode">
+     <enum>QLineEdit::Normal</enum>
+    </property>
+   </widget>
+   <zorder>idEdit</zorder>
+   <zorder>pwdEdit</zorder>
+   <zorder>idLabel</zorder>
+   <zorder>gotoMainBtn</zorder>
+   <zorder>titleLabel</zorder>
+   <zorder>repassLabel</zorder>
+   <zorder>nicknameLabel</zorder>
+   <zorder>nicknameEdit</zorder>
+   <zorder>ruleLabel</zorder>
+   <zorder>ruleText</zorder>
+   <zorder>joinBtn</zorder>
+   <zorder>passLabel</zorder>
+   <zorder>emailEdit</zorder>
   </widget>
   <widget class="QPushButton" name="minimizeBtn">
    <property name="geometry">
